--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@
                     <h2>TOTAL GOALS</h2>
                     <h3>scored last year</h3>
                     <h2>98</h2>
-                    <h2>GOALS</h2>
+                    <h3>GOALS</h3>
                 </div>
                 <div class="card red-card">
                     <h2>FUN</h2>
                     <h3>fact</h3>
-                    <p>Ronaldinho scored a total of</p>
                     <h2>328</h2>
-                    <p>goals in his career</p>
+                    <p>Goals scored by Ronaldinho in his career</p>
                 </div>
             </div>
         </div>
