--- a/statistics.html
+++ b/statistics.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
-    <title>Home page</title>
+    <title>Statistics page</title>
 </head>
 <body>
     <header>
@@ -21,44 +21,7 @@
             </ul>    
         </nav>
     </header>
-    <main>
-        <div id="hero-image">
-            <h1>THE MOST <br><span>AWAITED</span><br> TOURNAMENT</h1>
-        </div>
 
-        <div id="tournament-main-info">
-            <div id="cta-register-info">
-                <h2>Are you ready to prove that you are the best?</h2>
-                <p>Be part of the biggest football soccer tournament in the Kitchener-Waterloo Region.</p>
-                <p>
-                    Teams must be fully registered before <span>July 30!</span></p>
-                <a href="" id="btn-register">Register Now!</a>
-            </div>
-            <div id="color-cards">
-                <div class="card yellow-card">
-                    <h2>TOP 3</h2>
-                    <h3>From last year</h3>
-                    <ol>
-                        <li>Fury Team</li>
-                        <li>Tony Stark Team</li>
-                        <li>Avengers Team</li>
-                    </ol>
-                </div>
-                <div class="card yellow-card">
-                    <h2>TOTAL GOALS</h2>
-                    <h3>scored last year</h3>
-                    <h2>98</h2>
-                    <h3>GOALS</h3>
-                </div>
-                <div class="card red-card">
-                    <h2>FUN</h2>
-                    <h3>fact</h3>
-                    <h2>328</h2>
-                    <p>Goals scored by Ronaldinho in his career</p>
-                </div>
-            </div>
-        </div>
-    </main>
     <footer>
         <div class="footer-info">
             <h3>Additional Information</h3>
