--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <div id="color-cards">
                 <div class="card yellow-card">
                     <h2>TOP 3</h2>
-                    <h3>From last year</h3>
+                    <h3>Players from last year</h3>
                     <ol>
-                        <li>Fury Team</li>
-                        <li>Tony Stark Team</li>
-                        <li>Avengers Team</li>
+                        <li>Tony Stark</li>
+                        <li>Nick Fury</li>
+                        <li>Thor</li>
                     </ol>
                 </div>
                 <div class="card yellow-card">
@@ -77,7 +77,7 @@
         </div>
         <div class="footer-info">
             <h3>Location</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46381.52856807981!2d-80.53091168403627!3d43.401157832107955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf552c0c84c7f%3A0x6e63f95a69086668!2sKitchener%20Soccer%20Club!5e0!3m2!1ses-419!2sca!4v1753900646662!5m2!1ses-419!2sca" width="400" height="225" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46381.52856807981!2d-80.53091168403627!3d43.401157832107955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf552c0c84c7f%3A0x6e63f95a69086668!2sKitchener%20Soccer%20Club!5e0!3m2!1ses-419!2sca!4v1753900646662!5m2!1ses-419!2sca" width="100%" height="225" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
 </body>
