--- a/registration.html
+++ b/registration.html
@@ -6,7 +6,7 @@
     <!-- Responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FutCup - Sign Up Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
