--- a/shedule.html
+++ b/shedule.html
@@ -77,7 +77,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Soccer Tournament. All rights reserved.</p>
+      <p>&copy; 2025 Futcup. All rights reserved.</p>
     </div>
   </footer>
 
