--- a/shedule.html
+++ b/shedule.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="Soccer Tournament - Schedule" />
-  <title>Soccer Tournament | Schedule</title>
+  <meta name="title" content="Futcup - Schedule" />
+  <title>Futcup | Schedule</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
