--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="nav-bar">
                 <li><a href="index.html">Home Page</a></li>
                 <li><a href="statistics.html">Statistics</a></li>
-                <li><a href="">Schedule</a></li>
+                <li><a href="shedule.html">Schedule</a></li>
                 <li><a href="">Registration</a></li>
             </ul>    
         </nav>
