--- a/statistics.html
+++ b/statistics.html
@@ -14,9 +14,9 @@
         <a href="index.html"><img class="logo" src="imgs/logo.jpg" alt="Logo of Fut Cup"></a>
         <nav>
             <ul class="nav-bar">
-                <li><a href="index.html">Home Page</a></li>
+               <li><a href="index.html">Home Page</a></li>
                 <li><a href="statistics.html">Statistics</a></li>
-                <li><a href="">Schedule</a></li>
+                <li><a href="shedule.html">Schedule</a></li>
                 <li><a href="">Registration</a></li>
             </ul>    
         </nav>
