--- a/shedule.html
+++ b/shedule.html
@@ -15,10 +15,10 @@
       <h1>Soccer Tournament 2025</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="teams.html">Teams</a></li>
-          <li><a href="schedule.html" class="active">Schedule</a></li>
-          <li><a href="contact.html">Contact</a></li>
+         <li><a href="index.html">Home Page</a></li>
+         <li><a href="statistics.html">Statistics</a></li>
+         <li><a href="shedule.html">Schedule</a></li>
+         <li><a href="">Registration</a></li>
         </ul>
       </nav>
     </div>
