--- a/statistics.html
+++ b/statistics.html
@@ -17,7 +17,7 @@
                <li><a href="index.html">Home Page</a></li>
                 <li><a href="statistics.html">Statistics</a></li>
                 <li><a href="shedule.html">Schedule</a></li>
-                <li><a href="">Registration</a></li>
+                <li><a href="registration.html">Registration</a></li>
             </ul>    
         </nav>
     </header>
