--- a/registration.html
+++ b/registration.html
@@ -86,7 +86,7 @@
     <footer>
         <div class="footer-info">
             <h3>Additional Information</h3>
-            <p>At FUT CUP we want everyone to feel listened</p>
+            <p>At FUT CUP we want everyone to feel heard</p>
             <p>For any suggestions or complaints feel free to email us!</p>
             <a href="mailto:futcup@gmail.com">Email: futcup@gmail.com</a>
         </div>
