--- a/schedule.html
+++ b/schedule.html
@@ -7,7 +7,7 @@
     <title>Futcup | Schedule</title>
     <!-- Google Fonts for h1 -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&amp;family=Montserrat:wght@700&amp;display=swap" rel="stylesheet"/>
-    <link href="style.css" rel="stylesheet">
+    <link href="style1.css" rel="stylesheet">
 </head>
 <body>
     <header>
