--- a/schedule.html
+++ b/schedule.html
@@ -5,23 +5,22 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <meta content="Futcup - Match Schedule" name="title"/>
     <title>Futcup | Schedule</title>
-    <!-- Google Fonts for h1 -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&amp;family=Montserrat:wght@700&amp;display=swap" rel="stylesheet"/>
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="container nav-container">
-            <h1 class="main-heading">Soccer Tournament 2025</h1>
-            <nav aria-label="Main Navigation">
-                <ul class="nav-bar">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="statistics.html">Statistics</a></li>
-                    <li><a aria-current="page" href="shedule.html">Schedule</a></li>
-                    <li><a href="registration.html">Registration</a></li>
-                </ul>
-            </nav>
-        </div>
+        <a href="index.html"><img class="logo" src="imgs/logo.jpg" alt="Logo of Fut Cup"></a>
+        <nav>
+            <ul class="nav-bar">
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="statistics.html">Statistics</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="registration.html">Registration</a></li>
+            </ul>    
+        </nav>
     </header>
     <main>
         <section class="page-title">
@@ -85,9 +84,25 @@
         </section>
     </main>
     <footer>
-        <div class="container">
-            <p>© 2025 Futcup. All rights reserved. | Designed by Group 4</p>
+        <div class="footer-info">
+            <h3>Additional Information</h3>
+            <p>At FUT CUP we want everyone to feel listened</p>
+            <p>For any suggestions or complaints feel free to email us!</p>
+            <a href="mailto:futcup@gmail.com">Email: futcup@gmail.com</a>
+        </div>
+        <div class="footer-info">
+            <h3>Our social Media!</h3>
+            <p>Follow us in our social media so you don't loose any updates!</p>
+            <ul>
+                <li>Facebook - FUTCUP FB</li>
+                <li>Instagram - @the_real_futcup</li>
+                <li>TikTok - @futcupofficial</li>
+            </ul>
+        </div>
+        <div class="footer-info">
+            <h3>Location</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46381.52856807981!2d-80.53091168403627!3d43.401157832107955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf552c0c84c7f%3A0x6e63f95a69086668!2sKitchener%20Soccer%20Club!5e0!3m2!1ses-419!2sca!4v1753900646662!5m2!1ses-419!2sca" width="100%" height="225" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
 </body>
-</html></div>
+</html>
