--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@
 
     <!-- Responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FutCup - Sign Up Page</title>
+    <title>Sign Up Page</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- Google Fonts (matching index.html) -->
@@ -22,7 +22,7 @@
                 <li><a href="index.html">Home Page</a></li>
                 <li><a href="statistics.html">Statistics</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
-                <li><a class="active" href="registration.html">Registration</a></li>
+                <li><a href="registration.html">Registration</a></li>
             </ul>
         </nav>
     </header>
