--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
-    <title>Home page</title>
+    <title>Home</title>
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div id="hero-image">
-            <h1>THE MOST <br><span>AWAITED</span><br> TOURNAMENT</h1>
+            <h1>THE MOST <br><span>ANTICIPATED</span><br> TOURNAMENT</h1>
         </div>
 
         <div id="tournament-main-info">
