--- a/schedule.html
+++ b/schedule.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <meta content="Futcup - Match Schedule" name="title"/>
-    <title>Futcup | Schedule</title>
+    <title>Schedule</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
