--- a/statistics.html
+++ b/statistics.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
-    <title>Statistics page</title>
+    <title>Statistics</title>
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
             <ul class="nav-bar">
                <li><a href="index.html">Home Page</a></li>
                 <li><a href="statistics.html">Statistics</a></li>
-                <li><a href="shedule.html">Schedule</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="registration.html">Registration</a></li>
             </ul>    
         </nav>
